<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_view_pending"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:contentDescription="@string/pending"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Pending" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_view_confirmed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:contentDescription="@string/confirmed"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_payment"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Confirmed" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_view_processed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:contentDescription="@string/processed"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_package" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Processed" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_view_shipped"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:contentDescription="@string/shipped"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_track"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Shipped" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_view_canceled"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:contentDescription="@string/cancel"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Canceled" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>