<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserForgotPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="70dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_lock_open_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="5sp"
            android:text="Trouble Logging in?"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:paddingBottom="10dp"
            android:text="Enter your email and we'll send you a link to get back into your account."/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_solid"
            android:text="@string/send_reset_email"
            android:contentDescription="@string/send_reset_email"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            style="?attr/materialButtonOutlinedStyle" />

    </LinearLayout>


</FrameLayout>