<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="#b8cad4"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <!-- create the container  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        Add style image-->
        <Button
            android:id="@+id/btn_img_style_list"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/baseline_add_photo_alternate_24"
            android:text="@string/img_style"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--        Edit style    -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout_style_style_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_style_style_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--        Edit price    -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout_price_style_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_price_style_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--        Edit quantity    -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout_qty_style_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/qty">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_qty_style_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--        Edit tax rate    -->
        <RadioGroup
            android:id="@+id/rdBtnGp_style_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdBtn_no_tax_style_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Tax"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/rdBtn_gst_style_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GST"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/rdBtn_gst_pst_style_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GST &amp; PST"
                android:textSize="20sp"
                android:layout_weight="1"/>
        </RadioGroup>

        <!--        Clear this style-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear_style_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/cancel_grey"
            android:text="Clear style"
            android:textColor="@color/black"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>