<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerAddStyleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- create the container  -->
        <LinearLayout
            android:id="@+id/linearLayout_main_add_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout_default_style_add_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--        Add style image-->
                <Button
                    android:id="@+id/btn_img_add_style"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@drawable/baseline_add_photo_alternate_50"
                    android:text="@string/img_style"
                    android:textColor="@color/black"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--        Edit style    -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/style">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--        Edit price    -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/price">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--        Edit quantity    -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/qty">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



            </LinearLayout>

            <!--        Add more style-->
            <Button
                android:id="@+id/btn_more_add_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/baseline_add_24"
                android:drawableTint="#ffffff"
                android:text="More Style" />

            <!--    Cancel and confrim buttons-->
            <LinearLayout
                android:id="@+id/linearLayout_btns_add_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <!--    Cancel    -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel_add_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/cancel_grey"
                    android:text="Cancel"
                    android:textColor="@color/black" />

                <!--    Confirm    -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit_add_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/purple_500"
                    android:text="Confirm"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>