<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerAddProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SellerAddNewProductActivity">

        <LinearLayout
            android:id="@+id/linearLayout_main_edit_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Page title-->
            <TextView
                android:id="@+id/tv_edit_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="Edit Product"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!--Edit product default image-->
            <Button
                android:id="@+id/btn_default_img_edit_product"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/baseline_add_photo_alternate_50"
                android:text="@string/img_default"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <!-- Edit prodcut name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout_name_edit_prodcut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name_edit_prodcut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Edit Prodcut description  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout_des_edit_prodcut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_des">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_des_edit_prodcut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="6"
                    android:minLines="3"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  RecycleView to edit styles-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_style_edit_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--   Add product style -->
            <Button
                android:id="@+id/btn_add_style_edit_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/baseline_add_24"
                android:drawableTint="#ffffff"
                android:text="Add Style" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Edit Other Images"
                android:textSize="22sp" />

            <!--Add product other images-->
            <Button
                android:id="@+id/btn_other_img_edit_product"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/baseline_add_photo_alternate_50"
                android:text="@string/img_more"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <!--    Cancel    -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel_edit_product"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/cancel_grey"
                    android:text="Cancel"
                    android:textColor="@color/black" />

                <!--    Confirm    -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit_edit_product"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/purple_500"
                    android:text="Confirm"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>